k8s/apps/technitium/endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: technitium
  namespace: technitium
  labels:
    kubernetes.io/service-name: technitium
addressType: IPv4
ports:
  - port: 5380
endpoints:
  - addresses: ["192.168.1.5"]
    conditions:
      ready: true
