k8s/apps/technitium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium
  namespace: technitium
spec:
  ports:
    - port: 5380
      targetPort: 5380
