k8s/apps/technitium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium
  namespace: technitium
spec:
  ingressClassName: traefik
  rules:
    - host: technitium.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: technitium
                port:
                  number: 5380
